--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,13 @@
   {%- include head.html -%}
 
   <body>
-    {%- include header.html -%}
+    <!-- Unicorn Studio Background -->
+    <div class="unicorn-background">
+      <div data-us-project="gcvVBDluJVuqSpfNTKkJ"></div>
+      <script type="text/javascript">!function(){if(!window.UnicornStudio){window.UnicornStudio={isInitialized:!1};var i=document.createElement("script");i.src="https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.33/dist/unicornStudio.umd.js",i.onload=function(){window.UnicornStudio.isInitialized||(UnicornStudio.init(),window.UnicornStudio.isInitialized=!0)},(document.head || document.body).appendChild(i)}}();</script>
+    </div>
 
+    {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper background-block-color">
