--- a/assets/main.scss
+++ b/assets/main.scss
@@ -217,3 +217,23 @@ body {
     opacity: 1;
   }
 }
+
+.static-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url('/assets/static-background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 768px) {
+  .static-background {
+    background-size: cover;
+    background-position: center;
+  }
+}
