Add changepath to portfolio

--- a/_includes/portfolio-content.html
+++ b/_includes/portfolio-content.html
@@ -1,9 +1,11 @@
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://rough.app" target="_blank" rel="noopener noreferrer">Rough.app (2024) <img src="/assets/icons/external-link.svg"/></a></h2>
-    <p>Project management tool for remote teams</p>
+    <h2><a href="https://www.changepath.ai/en" target="_blank" rel="noopener noreferrer">Changepath.ai (2025) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <p>AI-powered career orientation for gen-z and millennials</p>
     <div class="portfolio-image-row">
-      <img class="big" src='/assets/portfolio/rough/rough-1.png'></img>
+      <img src='/assets/portfolio/changepath/onboarding.png'></img>
+      <img src='/assets/portfolio/changepath/questions.png'></img>
+      <img src='/assets/portfolio/changepath/insights.png'></img>
     </div>
   </div>
 </div>
@@ -15,6 +17,16 @@
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
       <img src='/assets/portfolio/slowmad/slowmad-2.jpg'></img>
+    </div>
+  </div>
+</div>
+
+<div class="portfolio-item">
+  <div>
+    <h2><a href="https://rough.app" target="_blank" rel="noopener noreferrer">Rough.app (2024) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <p>Project management tool for remote teams</p>
+    <div class="portfolio-image-row">
+      <img class="big" src='/assets/portfolio/rough/rough-1.png'></img>
     </div>
   </div>
 </div>
