--- a/_includes/portfolio-content.html
+++ b/_includes/portfolio-content.html
@@ -1,6 +1,6 @@
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://www.changepath.ai/en" target="_blank" rel="noopener noreferrer">Changepath.ai (2025) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <h2><a href="https://www.changepath.ai/en" target="_blank" rel="noopener noreferrer">Changepath.ai <img src="/assets/icons/external-link.svg"/></a></h2>
     <p>AI-powered career orientation for gen-z and millennials</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/changepath/onboarding.png'></img>
@@ -10,9 +10,9 @@
   </div>
 </div>
 
-<div class="portfolio-item">
+<!-- <div class="portfolio-item">
   <div>
-    <h2>Slowmad.app (2024)</h2>
+    <h2>Slowmad.app</h2>
     <p>Mobile first trip planner using Claude AI for recommendations and routing</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/slowmad/slowmad-1.jpg'></img>
@@ -23,17 +23,17 @@
 
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://rough.app" target="_blank" rel="noopener noreferrer">Rough.app (2024) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <h2><a href="https://rough.app" target="_blank" rel="noopener noreferrer">Rough.app <img src="/assets/icons/external-link.svg"/></a></h2>
     <p>Project management tool for remote teams</p>
     <div class="portfolio-image-row">
       <img class="big" src='/assets/portfolio/rough/rough-1.png'></img>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer">Klar.mx (2022) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <h2><a href="https://play.google.com/store/apps/details?id=mx.klar.app" target="_blank" rel="noopener noreferrer">Klar.mx <img src="/assets/icons/external-link.svg"/></a></h2>
     <p>Mexican neobank cross platform mobile app focused on credit</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/klar/klar-1.webp'></img>
@@ -45,7 +45,7 @@
 
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://planet.com" target="_blank" rel="noopener noreferrer">Planet.com (2017) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <h2><a href="https://planet.com" target="_blank" rel="noopener noreferrer">Planet.com <img src="/assets/icons/external-link.svg"/></a></h2>
     <p>Satellite imagery web application for access management and tasking</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/planet/planet-1.jpg' class="big"></img>
@@ -55,8 +55,8 @@
 
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web" target="_blank" rel="noopener noreferrer">N26 (2016) <img src="/assets/icons/external-link.svg"/></a></h2>
-    <p>German neobank web application focused around UX and premium offerings</p>
+    <h2><a href="https://n26.com/en-at/blog/take-a-tour-of-the-brand-new-n26-for-web" target="_blank" rel="noopener noreferrer">N26 <img src="/assets/icons/external-link.svg"/></a></h2>
+    <p>German neobank web application focused on UX and premium offerings</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/n26/n26-3.png' class="big"></img>
     </div>
@@ -65,7 +65,7 @@
 
 <div class="portfolio-item">
   <div>
-    <h2><a href="https://blacklane.com" target="_blank" rel="noopener noreferrer">Blacklane (2015) <img src="/assets/icons/external-link.svg"/></a></h2>
+    <h2><a href="https://blacklane.com" target="_blank" rel="noopener noreferrer">Blacklane <img src="/assets/icons/external-link.svg"/></a></h2>
     <p>Luxury car booking service</p>
     <div class="portfolio-image-row">
       <img src='/assets/portfolio/blacklane/blacklane-1.png'></img>
